--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,21 +1,15 @@
  #profile-photo {
-            height: 150px;
-            width: 150px;
-        }
-        body{
-            background-color: #DEFCF9;
-        }
-        hr{
-            border-style: none;
-            border-top-style: dotted;
-            border-width: 10px;
-            border-color: #C3BEF0;
-            height: 0px;
-            width: 5%;
-        }
-    h1{
-        color: #CCA8E9;
-    }
-    h3{
-        color: #CCA8E9;
-    }
+     height: 150px;
+     width: 150px;
+ }
+
+h1{
+    margin-top: 0;
+}
+h3{
+    margin: 5px 0px 5px 0px;
+}
+
+#skill-table th, td{
+    padding-right:10px;
+}
